apps/kbw-productsdisplay/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kbw-productsdisplay
  labels:
    app: kbw-productsdisplay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kbw-productsdisplay
  template:
    metadata:
      labels:
        app: kbw-productsdisplay
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: "512Mi"
      containers:
        - name: next
          image: ghcr.io/1spyral/kbw-productsdisplay
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /livez
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
